testdata/baselines/reference/submodule/compiler/isolatedModulesGlobalNamespacesAndEnums.errors.txt
enum2.ts(2,9): error TS18055: 'Enum.D' has a string type, but must have syntactically recognizable string syntax when 'isolatedModules' is enabled.


==== script-namespaces.ts (0 errors) ====
    namespace Instantiated {
        export const x = 1;
    }
    namespace Uninstantiated {
        export type T = number;
    }
    declare namespace Ambient {
        export const x: number;
    }
    
==== module-namespaces.ts (0 errors) ====
    export namespace Instantiated {
        export const x = 1;
    }
    
==== enum1.ts (0 errors) ====
    enum Enum { A, B, C }
    declare enum Enum { X = 1_000_000 }
    const d = 'd';
    
==== enum2.ts (1 errors) ====
    enum Enum {
        D = d,
            ~
!!! error TS18055: 'Enum.D' has a string type, but must have syntactically recognizable string syntax when 'isolatedModules' is enabled.
        E = A, // error
        Y = X, // error
        Z = Enum.A
    }
    
    declare enum Enum {
        F = A
    }